<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
                    <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="87dp"
                    android:layout_height="86dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.141"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.168"
                    tools:srcCompat="@tools:sample/avatars" />
        -->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259"
            app:srcCompat="@android:drawable/screen_background_light" />

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="413dp"
            android:layout_height="125dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/screen_background_light" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.366">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/profileName"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/profileId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profileId"
            app:layout_constraintStart_toStartOf="@+id/profileName"
            app:layout_constraintTop_toBottomOf="@+id/profileName" />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="331dp"
            android:layout_height="33dp"
            android:layout_marginTop="16dp"
            android:text="@string/profileDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileId" />

        <Button
            android:id="@+id/editProfile"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="109dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/my_button_bg"
            android:backgroundTint="#03FDFD"
            android:backgroundTintMode="add"
            android:padding="5dp"
            android:shadowColor="#503434"
            android:text="@string/follow"
            android:textColor="#00E2FF"
            app:layout_constraintBottom_toTopOf="@+id/profileDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.258" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="354dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/profileFollowing"
            android:layout_width="93dp"
            android:layout_height="19dp"
            android:layout_marginTop="12dp"
            android:text="@string/following"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/profileFollower"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDescription"
            app:layout_constraintVertical_bias="0.437" />

        <TextView
            android:id="@+id/profileFollower"
            android:layout_width="93dp"
            android:layout_height="19dp"
            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDescription"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/joinDate"
            android:layout_width="125dp"
            android:layout_height="20dp"
            android:text="@string/joinDate"
            app:layout_constraintBottom_toTopOf="@+id/profileFollowing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDescription"
            app:layout_constraintVertical_bias="0.461" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="51dp"
            android:layout_height="50dp"
            android:text="@string/buttonBack"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="101dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>